--- a/indecision/src/styles/base/_base.scss
+++ b/indecision/src/styles/base/_base.scss
@@ -1,8 +1,17 @@
 // rem
 html {
-  font-size: 62.5%;
+	font-size: 62.5%;
 }
 body {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 1.6rem;
+	background: $dark-blue;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 1.6rem;
+}
+
+button {
+	cursor: pointer;
+}
+
+button:disabled {
+	cursor: default;
 }
