--- a/indecision/src/styles/components/_header.scss
+++ b/indecision/src/styles/components/_header.scss
@@ -1,23 +1,23 @@
 .header {
-  margin-bottom: 4.8rem;
-  padding: 1.6rem 0;
+	margin-bottom: $xl-size;
+	padding: $m-size 0;
 
-  color: white;
-  background: #20222b;
+	color: white;
+	background: $off-black;
 }
 
 // BEM block element modifier
 .header__title {
-  font-size: 3.2rem;
+	font-size: $l-size;
 
-  margin: 0;
+	margin: 0;
 }
 
 .header__subtitle {
-  font-size: 1.6rem;
-  font-weight: 500;
+	font-size: $m-size;
+	font-weight: 500;
 
-  margin: 0;
+	margin: 0;
 
-  color: #a5afd7;
+	color: $off-white;
 }
