--- a/indecision/src/styles/components/_widget.scss
+++ b/indecision/src/styles/components/_widget.scss
@@ -4,6 +4,14 @@
 	margin-bottom: $xl-size;
 }
 
+.widget__message {
+	color: $off-white;
+	margin: 0;
+	padding: $l-size;
+	text-align: center;
+	border-bottom: 1px solid lighten($light-blue, 10%);
+}
+
 // Widget header
 .widget-header {
 	background: $blue;
